--- a/scrapping/package.json
+++ b/scrapping/package.json
@@ -9,6 +9,7 @@
   "author": "indistormborn",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "jsonfile": "^6.1.0"
   }
 }
