--- a/calendar/package.json
+++ b/calendar/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "googleapis": "^140.0.1"
+    "googleapis": "^140.0.1",
+    "moment-timezone": "^0.5.45"
   }
 }
