--- a/calendar/package.json
+++ b/calendar/package.json
@@ -9,6 +9,7 @@
   "author": "indistormborn",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "googleapis": "^140.0.1",
     "moment-timezone": "^0.5.45"
